--- a/nbafrontend/package.json
+++ b/nbafrontend/package.json
@@ -44,5 +44,5 @@
         "postcss": "^7.0.39",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
     },
-    "proxy": "localhost:3000"
+    "proxy": "https://localhost:3000"
 }
